####### kdevelop will overwrite this part!!! (begin)##########


####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign

SUBDIRS = africa america arctic baby babyj egypt finale future \
	  now oap oceans orient pirate prehistory prelude preludee school \
	  teens toccata victoria work blank simple 

datadir = $(kde_datadir)/$(PACKAGE)/episodes

#EXTRA_DIST = $(data_DATA)
