####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = back.png logo.png pause.png splash.png key.png crown.png blank.png lives0.png lives1.png lives2.png lives3.png

####### kdevelop will overwrite this part!!! (end)############

AUTOMAKE_OPTIONS = foreign
graphics_DATA = $(EXTRA_DIST)
graphicsdir = $(kde_datadir)/$(PACKAGE)/graphics
