
EXTRA_DIST = back.png logo.png pause.png splash.png				\
             key.png crown.png blank.png					\
             lives0.png lives1.png lives2.png lives3.png			\
             started.png playing.png finished.png unknown.png			\
             unplayed.png password.png

AUTOMAKE_OPTIONS = foreign
graphics_DATA = $(EXTRA_DIST)
graphicsdir = $(kde_datadir)/$(PACKAGE)/graphics
