####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = cage.wav crown.wav diamond.wav die.wav egg.wav key.wav monster.wav time.wav transport.wav 

####### kdevelop will overwrite this part!!! (end)############

AUTOMAKE_OPTIONS = foreign
sounds_DATA = $(EXTRA_DIST)
soundsdir = $(kde_datadir)/$(PACKAGE)/sounds
